# embassy-nucleo-68-test

./: Cargo.toml  LICENSE
.cargo/: config.toml
src/: main.rs
